# flatcode

./: .mergeignore  README.md  flatcode_context.txt  pyproject.toml
.github/workflows/: test.yml
src/flatcode/: __init__.py  __main__.py  cli.py  config.py  models.py
src/flatcode/core/: __init__.py  ignore.py  scanner.py  tree.py
src/flatcode/utils/: __init__.py  tokenizer.py
tests/: test_cli.py  test_refactored.py
