# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flatcode"
version = "0.1.3"
authors = [
    { name="jaywang98", email="cryptojayw@gmail.com" },
]
description = "A smart CLI tool to 'flatten' your project's code into a single, LLM-friendly context file."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "tiktoken",
    "pathspec>=0.11.0"
]

[project.scripts]
flatcode = "flatcode.cli:main"

[project.urls]
Homepage = "https://github.com/jaywang98/flatcode"
Issues = "https://github.com/jaywang98/flatcode/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]
test = [
    "pytest",
    "pytest-cov",
]

# Configuration for Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
# Tells pytest to add 'src' to the path, fixing import errors
pythonpath = [
    "src"
]